# cubic_bezier_spline

./: .gitignore  .pre-commit-config.yaml  README  README.md  README.txt  __init__.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: pypi-project.yml
bezier/: __init__.py  _project_hints.py  bezier_curve.py  bezier_curves.py  bezier_spline.py  commit_notes.py  construct_splines.py  continuity.py  curve_type.py  glyphs.py  matrices.py  other_solvers.py  path_transformations.py
bezier/test/: conftest.py  test_bezier_curves.py  test_bezier_spline.py  test_construct_splines.py  test_matrices.py
cubic_bezier_spline/: __init__.py  bezier_curve.py  bezier_spline.py  construct_splines.py  control_point_casting.py  matrices.py  other_solvers.py  type_hints.py
doc/: generate_examples.py
resources/: A Primer on Bézier Curves.html
src/cubic_bezier_spline/: __init__.py  bezier_curve.py  bezier_spline.py  construct_splines.py  control_point_casting.py  corner_test.py  curve_length.py  matrices.py  other_solvers.py  pairwise.py  svg_data.py  type_hints.py
test/: conftest.py  test_bezier_curves.py  test_bezier_spline.py  test_construct_splines.py  test_matrices.py  test_path_transformations.py
tests/: __init__.py  conftest.py  test_bezier_curves.py  test_bezier_spline.py  test_construct_splines.py  test_matrices.py  test_svg_data.py
ttf_extractor/: README.txt  __init__.py  bezier_to_svg.py  font_glyphs.py  glyphs.py  path_converter.py
ttf_extractor/test/: conftest.py  test_bezier_to_d.py  test_font_glyphs.py  test_path_conversion.py
