[project]
name = "cubic_bezier_spline"
version = "0.15.0"
description = "Approximate or interpolate a sequence of points into a sequence of c2-continuous, non-rational cubic Bézier curves."
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "paragraphs", "typing-extensions", "svg_ultralight", "vec2_math"]


[project.optional-dependencies]
dev = ["pytest", "pre-commit", "commitizen", "tox"]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.15.0"
tag_format = "$version"
major-version-zero = true
version_files = [
    "pyproject.toml:^version"
]


[tool.isort]
profile = "black"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{313,312,311,310,39}

[testenv]
deps = pytest
commands = pytest
"""


[tool.pytest.ini_options]
pythonpath = ["tests"]
log_cli = 1


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.10"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./venv"
