[project]
name = "cubic-bezier-spline"
version = "0.21.0"
description = "Approximate or interpolate a sequence of points into a sequence of c2-continuous, non-rational cubic Bézier curves."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shay Hill", email = "shay_public@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "paragraphs>=1.0.1",
    "svg-path-data>=0.5.3",
    "typing-extensions>=4.15.0",
    "vec2-math>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "tox>=4.30.3",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.21.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]
annotated_tag = true


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["tests"]
log_cli = 1

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{313,312,311,310,39}

[testenv]
deps = pytest
commands = pytest tests
"""

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.10"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./.venv"
